# heic_converter

./: CMakeLists.txt  README.md
include/: batch_processor.h  config.h  converter.h  file_utils.h  format_encoder.h  heic_decoder.h  image_processor.h  logger.h  metadata_handler.h
scripts/: build_codecs_debian12.sh  build_codecs_debian9.sh  build_debian12.sh  build_debian9.sh  install_deps_debian12.sh  install_deps_debian9.sh
src/: batch_processor.cpp  config.cpp  converter.cpp  file_utils.cpp  format_encoder.cpp  heic_decoder.cpp  image_processor.cpp  logger.cpp  main.cpp  metadata_handler.cpp
test/: CMakeLists.txt  test_batch_processor.cpp  test_file_utils.cpp  test_format_encoder.cpp  test_heic_decoder.cpp
